--- a/themes/local/scss/_components.scss
+++ b/themes/local/scss/_components.scss
@@ -41,3 +41,9 @@
 		width: 100%;
 	}
 }
+
+body:not(.modular) #body-wrapper > .container {
+	.modular-text, .container {
+		padding: 0;
+	}
+}
